word/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wp-svc
spec:
  selector:
    app: mysql
  ports:
  - port: 4000
    targetPort: wordpress-port
